# arneso-pypitemplate-instance-uv

./: .cookiecutter.json  .cruft.json  CONTRIBUTING.md  README.md  SECURITY.md  noxfile.py  pyproject.toml  sonar-project.properties
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: conf.py  index.md  reference.md
tests/: __init__.py  test_functions.py  test_main.py
